# Batterystatus

./: README.md  meson.build
data/: org.rinzwind.batterystatus.appdata.xml  org.rinzwind.batterystatus.desktop
po/: LINGUAS  POTFILES  de.po  en.po  es.po  fr.po  nl.po  org.rinzwind.batterystatus.pot
schema/: org.rinzwind.batterystatus.gschema.xml
src/: Application.vala  Main.vala  meson.build
src/Widgets/: Headerbar.vala  Settings.vala  Upower.vala  Window.vala
